test/files/neg/xmltruncated5.check
xmltruncated5.scala:4: error: input ended while parsing XML

^
one error found
